FIX(Visual): Scrollbars

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,28 @@
 @tailwind base;
+
+:root {
+  --primary: #2e026d;
+  --secondary: white;
+}
+* {
+  scrollbar-width: thin;
+  scrollbar-color: var(--primary) var(--secondary);
+}
+
+*::-webkit-scrollbar {
+  width: 10px;
+}
+
+*::-webkit-scrollbar-track {
+  background: var(--primary);
+  border-radius: 4px;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: var(--secondary);
+  border-radius: 14px;
+  border: 1px solid var(--primary);
+}
+
 @tailwind components;
 @tailwind utilities;
